# sim

./: CMakeLists.txt  copy_assets.cmake
New folder/: CMakeCache.txt  Makefile  cmake_install.cmake
assets/: input.fasta  output.txt  tilemap.xcf
src/: CMakeLists.txt  SimplexNoise.cpp  flecs.c  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_tables.cpp  imgui_widgets.cpp  main.cpp
src/headers/: flecs.h  main.hpp
